fix invalid overflow inside modal right-sheet and left-sheet

--- a/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/modals/modals.css
+++ b/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/modals/modals.css
@@ -422,3 +422,15 @@ body.modal-open {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
+
+.modal-open .modal.right-sheet,
+.modal-open .modal.left-sheet {
+    height: calc(100vh);
+    overflow-y: hidden;
+}
+
+.modal.right-sheet .modal-body,
+.modal.left-sheet .modal-body {
+    height: 100%;
+    overflow-y: auto;
+}
